Moving frame width and height to config file.  Adding example of a basic actor the generates random circles and then a producer that uses the actor to draw the circles on a buffered image for display.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,6 @@
+width = 640
+height = 580
+
 swing-dispatcher {
   type = "Dispatcher"
   executor = "actorutils.SwingEventThreadExecutorServiceConfigurator"
