Clean up code locations and get first exercise shored up.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,6 @@ height = 580
 
 swing-dispatcher {
   type = "Dispatcher"
-  executor = "actorutils.SwingEventThreadExecutorServiceConfigurator"
+  executor = "video.actorutils.SwingEventThreadExecutorServiceConfigurator"
   throughput = 1
 }
