Adding ASCII/ANSI rendered goose on console as example.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,6 +8,8 @@ swing-dispatcher {
 }
 
 akka {
+  stdout-loglevel = "OFF"
+  loglevel = "OFF"
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
   }
